# reconfine

./: ChangeLog.md  README.md  confine-game.cabal
src/: Confine.hs  Types.hs
src/Confine/: Internal.hs
test/: ConfineSpec.hs
